# OTRizer

./: CMakeLists.txt  Resource.cpp  Resource.h
cmake/: OTRizerConfig.cmake.in
include/OTRizer/: Resource.h
